--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -85,11 +85,11 @@ KEYWORDS : sound spatialization, interoperability, layered architecture, adaptat
  
 The goal of each spatialization
 %rendering is it only the rendering system, or control/rendering ?
-system is, simply speaking, to facilitate or even empower the creative use of spatial aspects for the sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal across composers. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
+system is, simply speaking, to facilitate or even empower the creative use of spatial medium for the sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal amongst composers. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
 For instance, the requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02} %TODO: find a Robert Normandeau reference
 ), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
-For instancein a interactive art installation the real-time quality of a spatial rendering system in combination with the possibility to controlled spatial processes through a multi-touch screen of great importance, whereas for a performance of a multichannel fixed-media composition, the compensation of non-equidistant loudspeaker in terms of sound pressure and time delays is paramount. Other requirements may be binaural rendering for headphone listening, multichannel playback and recording possibility, or a visual representation of a sound scene.  
-Moreover, even during the creation of one spatial art work, the importance of these requirements change in the different stages of the creative processes \emph{Experimentation -- Composing -- Performance -- Documentation}. 
+For instance, an interactive art installation where the real-time quality of a spatial rendering system in combination with the possibility to controlled spatial processes through a multi-touch screen is of great importance, whereas for a performance of a multichannel fixed-media composition the compensation of non-equidistant loudspeaker in terms of sound pressure and time delays is paramount. Other requirements may be binaural rendering for headphone listening, multichannel playback and recording, or a visual representation of a sound scene.  
+Moreover, even during the creation of one spatial art work, the importance of these requirements change at different stages of the creative processes \emph{Experimentation -- Composing -- Performance -- Documentation}. 
 
 
 
@@ -158,10 +158,10 @@ Moreover, even during the creation of one spatial art work, the importance of th
 ?? shall we mention live diffusion as a paradigm ?
 \subsection{Digital Audio Workstations - DAW} \label{sec:digital audio workstations - DAW} 
 Currently, many composers and sound-artists use DAWs for designing their sound spatialization, primarily in the context of fixed media, tape-music and consumer media production. Users of DAWs have often former experience with live diffusion systems or with panning in a hardware mixing console and their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
-A lot of (mainly commercial) DAWs are matured and offer a systematic user interface, a good project and sound file management, and an extendability through plug-ins and can fulfill the needs of many users in the described context.\\
+A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins and can fulfill the needs of many users in the described context.\\
 However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener and originally designed for the requirements of the film industry, is the most common multichannel format in DAWs and in surround panning plugins. More recent, extensions to 7.1 or 10.2 can be found\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
 Non-commercial loudspeaker setups as they are used in art installations or concert hall environments, varying in number and layout of loudspeakers, are usually not expected -- consequently existing DAW-projects are hard to adapt to this situations. 
-%From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. We had to wait until the late nineties to see new suggestions for the surround workstations (from 6.1 to 10.2, , enhancing sides precision and perception outside of the Central Listening Position.\\
+%From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. It was not until the late nineties that new suggestions for surround workstations (from 6.1 to 10.2, enhancing sides precision, and perception outside of the Central Listening Position) were considered.\\
 %This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
 \\Another critical function for surround sound mixing is how the energy of a sound is mixed between the loudspeakers. A \emph{blur} parameter, which determines the apparent source width of a panned signal should be a standard control element of every surround panner, because it enables many variations and possibilities for a creative mix. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
 In most applications, this factor is restricted and linked to the sound source's position to the center in the surround panner, and is related to parameters such as \emph{spread} or \emph{diversity} (e.g. in Apple Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). To the authors opinion, the most flexible control element can be found in Sequoia \footnote{\url{http://www.magix.com/us/sequoia/}}, with \emph{soundfield} offset and character (shape) settings for each track, a \emph{global divergence} to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. 
@@ -180,19 +180,19 @@ In most applications, this factor is restricted and linked to the sound source's
 % 
       
 \subsection{Media programming environments}  \label{sec:Media programming environments}
-Beside the paradigm of the DAW, various media programming environment exist, such as SuperCollider, Pure Data, Chuck, OpenMusic, or Max/MSP which are capable for spatial sound synthesis. In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.\\  
-However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges in spatial music, as outlined in section \ref{sec:introduction}. Consequently, enumerable different self-contained  spatialization libraries and toolboxes were created by artists and researcher, such as the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, or Virtual Microphone Control \cite{CMJ08-VIMIC} to generate virtual sound sources and artificial spaces. Also toolboxes primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
+Beside the paradigm of the DAW, various media programming environments exist, such as SuperCollider, Pure Data, Chuck, OpenMusic, or Max/MSP that are capable for spatial sound synthesis. In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.\\  
+However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges in spatial music, as outlined in section \ref{sec:introduction}. Consequently, numerous different self-contained spatialization libraries and toolboxes were created by artists and researcher, such as the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, and Virtual Microphone Control \cite{CMJ08-VIMIC} to generate virtual sound sources and artificial spaces. Also toolboxes primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
 However, each tool may only provide solutions for a subset of compositional viewpoints and the development of new aesthetics through combining these tools is difficult or even limited through their specific designs. 
 %LIMITATIONS OF THESE SOLUTIONS :
 
 \section{Strategies \& Methodologies in Spatial Sound Synthesis}  
  
-A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of the audio scene. Other contexts such as audio installations or multimedia work imply a different sequence in the steps of the process. The modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layer model doesn't imply a specific method, it much rather tries to emphasize the importance of the interchangeability of modules, which share their interconnecting interfaces. The tools for each layer can be exchanged and compared, without forcing the artist to completly rebuild his setup.
+A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of the audio scene. Other contexts such as audio installations or multimedia work imply a different sequence in the steps of the process. The modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layer model doesn't imply a specific method, it much rather tries to emphasize the importance of the interchangeability of modules, which share their interconnecting interfaces. The tools for each layer can be exchanged and compared, without forcing the artist to completely rebuild their setup.
 
 \begin{quote}Spatial orchestration eases this [...] constraint, [...] the composition may be reconfigured for each individual performance. This will require [...] the composer [to] conceive spatial attributes in a more abstract fashion, that is then instantiated in potentially different ways into different performance environments. \cite{Lyon:2008spatial_orchestration} \end{quote}
 By working symbolically during the composition/editing process and separating the authoring from the rendering processes a realization can become portable. A common set of descriptors and shared representation metaphors such as timelines or scene graphs builds the glue to make a disparate set of tools into a coherent workflow by enhancing interoperability between the different building blocks.\\
-Modularity is another key point towards this aim, as it allows to separate elements into different layers, according to their function, as described in \ref{sec:layers}. It also allows adaptability, through modules querying other modules to adapt themselves to other parts of the graph.\\
-The Tools have to comply to these recommendations, and can be separated in two categories : rendering engines and authoring meta-tools.\\
+Modularity is another essential tenet.  Modularity allows the separation of elements into different layers according to their function as described in \ref{sec:layers}.  Furthermore, Modularity provides a means by which   modules may query additional modules and then adapt themselves to other parts of the graph.\\
+The Tools must comply to these recommendations, and can be separated in two categories : rendering engines and authoring meta-tools.\\
 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
@@ -248,7 +248,7 @@ In order to better grasp the structural and methodological entities used in a sp
 \subsection{SpatDIF}
 
 The goal of SpatDIF is to develop a system-independent language for describing spatial audio scenes \cite{Peters:2008spatdif} 
-Formats who integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because these formats are primary tailored to multimedia and gaming applications and do not necessarily consider the special requirements of spatial music and performances in concert venues or sonic/mixed media installations in specific places such as galleries or museums. Furthermore it is the authors opinion that artists were not sufficiently involved in the development of these formats.\\
+Formats that integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because these formats are primary tailored to multimedia and gaming applications and do not necessarily consider the special requirements of spatial music and performances in concert venues or sonic/mixed media installations in specific places such as galleries or museums. Furthermore it is the authors' opinion that artists were not sufficiently involved in the development of these formats.\\
 As can be seen in the layer section (... to be continued ...)
 
 
@@ -259,17 +259,16 @@ As can be seen in the layer section (... to be continued ...)
 In order to concretely experiment these ideas, the authors designed and used the tools described below :
 
 \subsection{ICST Ambisonics}
-The ICST ambisonics tools comprise a set of four externals for MaxMSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm was derived from in-phase ambisonic decoding and also coded as MaxMSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular sepaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. \cite{Neukom:2008ambipan}
+The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm was derived from in-phase ambisonic decoding and also coded as Max/MSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular sepaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. \cite{Neukom:2008ambipan}
 
 \subsection{Jamoma}
 
-Jamoma\footnote{\url{http://www.jamoma.org/}}  is a collaborative set of software tools, including DSP libraries, and a framework for structuring Max/MSP patches.\\
-As a part of the Jamoma library, the DBAP algorithm \cite{dbapICMC09} has been developed as a Max/MSP external. Its major interest consists in how it goes beyond the loudspeakers setup limitation explained in \ref{sec:digital audio workstations - DAW}, based on an ideal model rather than actual positions of loudspeakers in the room, which can be particularly useful for theatre or installation context.\\
-One other important part of the Jamoma modular framework\cite{Place:2006jamoma} supplies a set of spatialization tools, as modules wrapping different spatialization algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, Ambisonics \cite{Schacher:2006ambi_max}, ViMiC\cite{CMJ08-VIMIC}) that can be combined and substituted one to each other in order to, e.g. quickly compare the adequation of each of them to a specific context. 
-Moreover, a number of effect processors (Doppler, Airfilter, RollOff, Reverb) and utilities such as loudspeaker setup including sound pressure and delay compensation for non-equidistant loudspeaker arrangements, multichannel levelmeters and auxiliary sends are also included.
-All these modules have been designed according to the same namespace model, thus allowing the user to seamlessly connect the modules in minutes and thus experiment ideas presented here, in particular, the actual interoperability of different algorithms, Holo-Edit, Ambimonitor GUI object and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}).\\
-Moreover, an ongoing effort has be done in developing Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topographies, allowing connections carrying multiple channels of audio.\\
-TODO : develop the multicore thingie (Tim)
+Jamoma\footnote{\url{http://www.jamoma.org/}} is a collaborative set of software tools.  It includes DSP libraries and a framework for structuring Max/MSP patches.\\
+The DBAP algorithm \cite{dbapICMC09} is included in the Jamoma library as a Max/MSP external. DBAP focuses on applications that extend beyond traditional loudspeaker arrangements.  Limitations explained in \ref{sec:digital audio workstations - DAW}, based on an ideal model rather than actual positions of loudspeakers in the room, can thus be overcome.  DBAP has proven to be particularly useful in theatre and installation applications.\\
+In addition to the libraries, the Jamoma Modular Framework\cite{Place:2006jamoma} supplies a set of spatialization tools as modules wrapping various spatialization algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, and ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
+Moreover, a number of effect processors (Doppler, Airfilter, RollOff, Reverb) and utilities (loudspeaker setup, FIXME:SPL compensation, FIXME:delay compensation, multichannel meters and auxiliaries) are also available in the distribution.
+All these modules have been designed according to a common namespace model, thus allowing the user to seamlessly connect the modules in minutes and then experiment with the ideas presented here.  In particular, the  interoperability of different algorithms such as Holo-Edit, ICST Ambimonitor, and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}) can be quickly mapped to the aforementioned rendering models.\\
+Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topographies.  One application of Jamoma Multicore is the creation of "multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can be audio in the traditional sense, or carried ambisonics encoded signals of the Nth order.
 
  
 \subsection{Holo-Edit}
@@ -303,7 +302,7 @@ A conclusion is the place when you get tired of thinking. \\
 %%%%%%%  Poubelle %%%%%%   
 	
 %\subsection{Frameworks for Spatialization}
-%\textbf{Spatialisateur} (Spat) \cite{JotPhD}, in development at IRCAM and Espaces Nouveaux since 1991, is a library of spatialization algorithms for MaxMSP, including VBAP, first-order Ambisonics and stereo techniques (XY, MS, ORTF) for up to 8 loudspeakers. It can also reproduce 3D sound for headphones (binaural) or 2/4 loudspeakers (transaural). A room model is included to create artificial early reflections and reverb controlled by a perceptual-based user interface.\\
+%\textbf{Spatialisateur} (Spat) \cite{JotPhD}, in development at IRCAM and Espaces Nouveaux since 1991, is a library of spatialization algorithms for Max/MSP, including VBAP, first-order Ambisonics and stereo techniques (XY, MS, ORTF) for up to 8 loudspeakers. It can also reproduce 3D sound for headphones (binaural) or 2/4 loudspeakers (transaural). A room model is included to create artificial early reflections and reverb controlled by a perceptual-based user interface.\\
 %\textbf{Ambisonics toolbox}  \cite{Schacher:2006ambi_max}
 
    
